--- a/style.css
+++ b/style.css
@@ -41,6 +41,22 @@ iframe {
     border-style:none;
 }
 
+p {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: justify;
+}
+
+a {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: justify;
+}
+
 /*  */
 .wrapper{
   display: flex;
