--- a/style.css
+++ b/style.css
@@ -226,38 +226,47 @@ h3{
 /* the following linces pertain to elements for Learning_and_Projects.html */
 .week_1{
   color:white;
+  font-size: 12px;
 }
 
 .project_1{
   color:white;
+  font-size: 12px;
 }
 
 .cash_machine{
   color:white;
+  font-size: 12px;
 }
 
 .week_2{
   color:white;
+  font-size: 12px;
 }
 
 .project_2{
   color:white;
+  font-size: 12px;
 }
 
 .code_based_text_game{
   color:white;
+  font-size: 12px;
 }
 
 .week_3{
   color:white;
+  font-size: 12px;
 }
 
 .project_3{
   color:white;
+  font-size: 12px;
 }
 
 .website{
   color:white;
+  font-size: 12px;
 }
 
 /* the following linces pertain to elements for Contact_Me.html */
