--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 
 *{
-  font-family: 'Comfortaa', cursive;
+  margin: 0;
+  padding: 0;
 }
 
-body{
-  margin: 0;
-  padding: 0px;
+body {
+  font-family: 'Comfortaa', cursive;
+  background: black;
+  height: 100vh;
+  overflow: hidden;
 }
 
 section {
@@ -16,6 +19,7 @@ section {
   flex-direction: column;
   margin: 0 128px;
   padding: 0 128px;
+  scroll-snap-align: center;
 }
 
 #videobg {
@@ -40,13 +44,13 @@ section {
 }
 
 /* navbar container */
-#navbarContainer {
+#container {
   width: 100%;
   height: 100%;
   /* smooth scroll */
   overflow-y: scroll; /* sets the scroll mechanism vertically */
   scroll-behavior: smooth; /* sets the scroll behavior to smooth */
-  scroll-snap-type: y mandatory; /* forces the scroll snap vertically */
+  scroll-snap-type: y mandatory; 
 }
 
 /* navbar styling */
