--- a/style.css
+++ b/style.css
@@ -11,27 +11,41 @@
 body{
   margin: 0;
   padding: 0px;
-body {
   font-family: 'Comfortaa', cursive;
   background: black;
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 section {
-@ -16,6 +19,7 @@ section {
   flex-direction: column;
   margin: 0 128px;
   padding: 0 128px;
   scroll-snap-align: center;
 }
 
+/* videobg */
 #videobg {
-@ -40,329 +44,329 @@
-}
+  position: fixed;
+  z-index: -1000;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: black;
+ }
+ 
+ @media {
+  .background-video {
+   width: 100%;
+   height: 100%;
+  }
+ }
 
 /* navbar container */
-#navbarContainer {
+
 #container {
   width: 100%;
   height: 100%;
