--- a/style.css
+++ b/style.css
@@ -2,12 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 
-*{
-  font-family: 'Comfortaa', cursive;
-  margin: 0;
-  padding: 0;
-}
-
 body{
   margin: 0;
   padding: 0px;
@@ -15,13 +9,6 @@ body{
   background: black;
   height: 100vh;
   /* overflow: hidden; */
-}
-
-section {
-  flex-direction: column;
-  margin: 0 128px;
-  padding: 0 128px;
-  scroll-snap-align: center;
 }
 
 /* videobg */
@@ -44,8 +31,7 @@ section {
   }
  }
 
-/* navbar container */
-
+/* container */
 #container {
   width: 100%;
   height: 100%;
@@ -54,6 +40,13 @@ section {
   scroll-behavior: smooth; /* sets the scroll behavior to smooth */
   scroll-snap-type: y mandatory; /* forces the scroll snap vertically */
   scroll-snap-type: y mandatory; 
+}
+
+section {
+  flex-direction: column;
+  margin: 0 64px;
+  padding: 0 64px;
+  scroll-snap-align: center;
 }
 
 /* navbar styling */
