--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body{
   margin: 0;
-  padding: 0px;
+  padding: 0;
   font-family: 'Comfortaa', cursive;
   background: black;
   height: 100vh;
@@ -26,8 +26,8 @@ body{
  
  @media {
   .background-video {
-   width: 100%;
-   height: 100%;
+   width: 100vw;
+   height: 100vh;
   }
  }
 
@@ -117,7 +117,7 @@ iframe {
     width: 100%;
 }
 
-/*  */
+/* animated text */
 .wrapper{
   display: flex;
   margin: 128px 128px;
@@ -176,7 +176,7 @@ iframe {
     left: 0;
   }
 }
- /*  */
+ /* links */
 a:link, a:visited{
   color:white
 } 
@@ -188,6 +188,8 @@ a:any-link{
 a:hover{
   color: yellow;
 }
+
+/* headings */
 
 h1{
   color:yellow;
@@ -205,7 +207,7 @@ h3{
   color: yellow;
 }
 
-/* the following lines pertain to elements for Index.html */
+/* home */
 
 .homepage_introduction{
   color:white;
@@ -217,6 +219,7 @@ h3{
   font-size: 12px;  
 }
 
+/* social media */
 .follow_me{
   display: flex;
   flex-direction: row;
@@ -228,7 +231,7 @@ h3{
   margin: 0px;
 }
 
-/* the following linces pertain to elements for Discovery.html */
+/* discover */
 .introduction{
   color:white;
   font-size: 12px;
@@ -277,7 +280,7 @@ h3{
   text-align: left;
 }
 
-/* the following linces pertain to elements for Learning_and_Projects.html */
+/* projects */
 .week_1{
   color:white;
   font-size: 12px;
@@ -323,7 +326,7 @@ h3{
   font-size: 12px;
 }
 
-/* the following linces pertain to elements for Contact_Me.html */
+/* about */
 .contact_details{
   color:white;
   font-size: 12px;
