--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 
 body{
-  margin: 0;
-  padding: 0;
+  margin: 0 64px;
+  padding: 0 64px;
   font-family: 'Comfortaa', cursive;
   background: black;
   height: 100vh;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 /* videobg */
@@ -39,13 +39,12 @@ body{
   overflow-y: scroll; /* sets the scroll mechanism vertically */
   scroll-behavior: smooth; /* sets the scroll behavior to smooth */
   scroll-snap-type: y mandatory; /* forces the scroll snap vertically */
-  scroll-snap-type: y mandatory; 
 }
 
 section {
+  display: flex;
   flex-direction: column;
-  margin: 0 64px;
-  padding: 0 64px;
+  justify-content: center;
   scroll-snap-align: center;
 }
 
