--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body{
-  margin: 0 64px;
-  padding: 0 64px;
   font-family: 'Comfortaa', cursive;
   background: black;
   height: 100vh;
@@ -46,6 +49,7 @@ section {
   flex-direction: column;
   justify-content: center;
   scroll-snap-align: center;
+  padding: 0 128px;
 }
 
 /* navbar styling */
@@ -78,8 +82,6 @@ section {
   text-decoration: none;
   font-size: 1rem;
   position: fixed;
-  display: flex;
-  padding: 16px;
 }
   
 /* navbar link(s) */
